# churn-prediction-model-ibm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
api/: logging_config.py  main.py  middleware.py  model_loader.py  schemas.py
data/: telco_churn_preprocessed.csv
docs/: deploy_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
models/: baseline_dummy_model.joblib  baseline_dummy_model_metrics.json  baseline_logistic_regression.joblib  baseline_logistic_regression_metrics.json  decision_tree.joblib  decision_tree_metrics.json  gradient_boosting.joblib  gradient_boosting_metrics.json  mlp_model.pt  mlp_model_metrics.json  random_forest_metrics.json  transformer.pkl
notebooks/: DEA.ipynb
reports/: cost_analysis.json  cost_analysis.md
src/data/: __init__.py  data_loader.py  features.py  preprocessing.py  schema.py
src/evaluation/: __init__.py  compare_models.py  cost_analysis.py
src/models/: __init__.py  arvores.py  baselines.py  mlp.py  mlp_persistence.py  mlp_trainer.py
src/visualization/: __init__.py  eda_analysis.py
tests/: conftest.py
tests/smoke/: test_smoke.py
tests/unit/api/: test_main.py  test_middleware.py  test_model_loader.py
tests/unit/data/: test_data_loader.py  test_features.py  test_preprocessing.py  test_schema.py
tests/unit/evaluation/: test_compare_models.py  test_cost_analysis.py
tests/unit/models/: test_arvores.py  test_baselines.py  test_mlp.py  test_mlp_persistence.py  test_mlp_trainer.py
tests/unit/visualization/: test_eda_analysis.py
