[project]
name = "churn-ibm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "mlflow>=2.13.0",
    "numpy>=2.4.4",
    "pandas>=2.0.0,<3.0.0",
    "pandera>=0.18.0",
    "protobuf",
    "python-json-logger>=3.3.0",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools",
    "sqlalchemy",
    "torch>=2.12.0",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "notebooks",
    "mlruns",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort (ordenação de imports)
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
